<resources>
    <!-- Application Defaults -->
    <string name="app_name">StashUp</string>
    <drawable name="app_logo">@drawable/stashuplogo</drawable>
    <string name="stash_up_desc">StashUp Logo</string>

    <!-- Login -->
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="register">REGISTER</string>
    <string name="login_btn">Login</string>
    <string name="name_hint">Name</string>
    <string name="reset_password">Reset Password</string>
    <string name="dashboard_title">Dashboard</string>
    <string name="placeholder_name">John Smith</string>
    <string name="save">Save</string>
    <string name="change_profile">Change Profile</string>
    <string name="current_password_hint">Current Password</string>

    <!-- Navigation -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_home">Home</string>
    <string name="menu_sign_out">Sign out</string>
    <string name="menu_profile">Profile</string>

    <!-- Settings -->
    <string name="menu_settings">Settings</string>
    <string name="general_header">General</string>

    <!-- Home/Transactions -->
    <string name="transactions_header">Transactions</string>
    <string name="total_balance_header">Total Balance</string>
    <string name="placeholder_balance">+$ 800.00 CAD</string>
    <string name="menu_transactions">Transactions</string>
    <string name="create_transaction">Create a transaction</string>
    <string name="manual_transaction_tv">Create new transaction</string>
    <string name="transaction_name_tv">Transaction Name</string>
    <string name="add_person_text">Add person</string>
    <string name="total_cost_header">Total Cost</string>
    <string name="pay_receive_header">You pay/receive</string>
    <string name="transaction_name_hint">Transaction Name</string>
    <string name="cost_hint">Cost</string>
    <string name="shared_expense_text">Is it a shared expense?</string>
    <string name="who_paid_text">Did you pay?</string>
    <string name="discard">Discard</string>

    <!-- Expenditure -->
    <string name="menu_expenditure">Expenditure By City</string>
    <string name="city_name_text">City Name</string>
    <string name="total_cost_per_day">Total Cost Per Day</string>
    <string name="set_location_text">Set location</string>
    <string name="delete_btn">Delete</string>
    <string name="more_options">More Options</string>

    <!-- Overflow Menu -->
    <string name="display_id">Display ID</string>
    <string name="generate_qr">Generate QR Code</string>
    <string name="change_settings">Settings</string>
    <string name="manual_existing_tv">Get existing transaction</string>
    <string name="id_hint">Transaction ID</string>
    <string name="add_transaction_text">Add Transaction</string>
    <string name="qr_existing_tv">Scan QR code</string>
    <string name="category">Select expense category…</string>
    <string name="city">CITY</string>
    <string name="n_a">N/A</string>
    <string name="country">COUNTRY</string>
    <string name="low">LOW</string>
    <string name="high">HIGH</string>
    <string name="avg_spending">Avg. Spending</string>
    <string name="no_balance">$0.00</string>
    <string name="initialBalance">$800</string>

</resources>