<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.transactions.ViewTransactionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/transaction_name_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:text="@string/transaction_name_tv"
            android:textSize="32sp" />

        <Button
            android:id="@+id/delete_btn"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_btn" />

    </LinearLayout>


    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_marginHorizontal="16dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.375"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cost"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            android:layout_weight="1"
            app:layout_constraintBottom_toTopOf="@id/pay_receive"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/total_cost_header"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/total_cost_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/placeholder_balance"
                    android:textSize="32sp" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/pay_receive"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            android:layout_weight="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cost">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/pay_receive_header"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/pay_receive_tv"
                    android:textColor="@color/red"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/placeholder_balance"
                    android:textSize="32sp" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/add_person_btn"
        style="?attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginHorizontal="8dp"
        android:text="@string/add_person_text" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/list_view_cv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_weight="0.625">

        <ListView
            android:id="@id/list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp" />

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>