<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.group19.stashup.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_home_to_viewTransactionFragment"
            app:destination="@id/viewTransactionFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_transactions"
        android:name="com.group19.stashup.ui.transactions.TransactionFragment"
        android:label="@string/menu_transactions"
        tools:layout="@layout/fragment_transactions">
        <action
            android:id="@+id/action_nav_transactions_to_viewTransactionFragment"
            app:destination="@id/viewTransactionFragment" />
        <action
            android:id="@+id/action_nav_transactions_to_createTransactionFragment"
            app:destination="@id/createTransactionFragment" />
        <action
            android:id="@+id/action_nav_transactions_to_manualExistingFragment"
            app:destination="@id/manualExistingFragment" />
        <action
            android:id="@+id/action_nav_transactions_to_qrExistingFragment"
            app:destination="@id/qrExistingFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_expenditure"
        android:name="com.group19.stashup.ui.expenditure.CountryExpenditureFragment"
        android:label="@string/menu_expenditure"
        tools:layout="@layout/fragment_country_expenditure">
        <action
            android:id="@+id/action_nav_expenditure_to_cityExpenditureFragment"
            app:destination="@id/cityExpenditureFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.group19.stashup.ui.settings.SettingsFragment"
        android:label="@string/menu_settings" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.group19.stashup.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/viewTransactionFragment"
        android:name="com.group19.stashup.ui.transactions.ViewTransactionFragment"
        android:label="@string/menu_transactions"
        tools:layout="@layout/fragment_view_transaction" >
        <action
            android:id="@+id/action_viewTransactionFragment_to_createTransactionFragment"
            app:destination="@id/createTransactionFragment" />
    </fragment>

    <fragment
        android:id="@+id/createTransactionFragment"
        android:name="com.group19.stashup.ui.transactions.CreateTransactionFragment"
        android:label="@string/menu_transactions"
        tools:layout="@layout/fragment_create_transaction" />

    <fragment
        android:id="@+id/cityExpenditureFragment"
        android:name="com.group19.stashup.ui.expenditure.CityExpenditureFragment"
        android:label="@string/menu_expenditure"
        tools:layout="@layout/fragment_city_expenditure">
        <action
            android:id="@+id/action_cityExpenditureFragment_to_viewExpenditureFragment"
            app:destination="@id/viewExpenditureFragment" />
    </fragment>

    <fragment
        android:id="@+id/viewExpenditureFragment"
        android:name="com.group19.stashup.ui.expenditure.ViewExpenditureFragment"
        android:label="@string/menu_expenditure"
        tools:layout="@layout/fragment_view_expenditure" />
    <fragment
        android:id="@+id/manualExistingFragment"
        android:name="com.group19.stashup.ui.transactions.ManualExistingFragment"
        android:label="@string/menu_transactions"
        tools:layout="@layout/fragment_manual_existing" />
    <fragment
        android:id="@+id/qrExistingFragment"
        android:name="com.group19.stashup.ui.transactions.QrExistingFragment"
        android:label="@string/menu_transactions"
        tools:layout="@layout/fragment_qr_existing" />
</navigation>