<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="192dp"
                android:layout_height="192dp"
                android:layout_margin="16dp"
                android:contentDescription="@string/stash_up_desc"
                android:minWidth="192dp"
                android:minHeight="192dp"
                android:src="@drawable/app_logo" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/ic_password_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/current_password_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_edit_text"
                    android:hint="@string/current_password_hint"
                    android:inputType="textPassword"
                    android:nextFocusDown="@id/name_et" />

            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_marginVertical="8dp"
                android:layout_marginHorizontal="32dp"
                android:layout_height="1dp"
                android:background="@color/blue_green" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:startIconDrawable="@drawable/ic_name_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_edit_text"
                    android:focusedByDefault="true"
                    android:hint="@string/name_hint"
                    android:inputType="textPersonName"
                    android:nextFocusDown="@id/email_et" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:startIconDrawable="@drawable/ic_email_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_edit_text"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:nextFocusDown="@id/password_et" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/ic_password_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_edit_text"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:nextFocusDown="@id/change_profile_btn" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom">

                <Button
                    android:id="@+id/change_profile_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/change_profile" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

</FrameLayout>